--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,39 +10,71 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
         android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:textSize="42sp"
-        />
+        android:layout_marginTop="10dp"
+        android:text="Hello! :)"
+        android:textSize="42sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="0dp"
+        android:text="@string/welcome_to_factsapp"
+        android:textSize="30sp" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/editText"
+        android:id="@+id/email"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:hint="@string/name"
-        android:textColor="@color/black"
+        android:layout_height="56dp"
+        android:layout_margin="10dp"
+        android:hint="@string/email"
         android:inputType="text"
-        android:textSize="14sp"
-        android:layout_margin="20dp"/>
+        android:textColor="@color/black"
+        android:textSize="14sp" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="160dp"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:layout_margin="10dp"
+        android:hint="@string/password"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="148dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/purple_500"
+            android:text="Login" />
+
+        <TextView
+        android:id="@+id/or"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="@color/teal_200"
-        android:text="@string/say_hi" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="or"
+        android:textSize="22sp" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="@color/purple_500"
-        android:text="@string/lets_go" />
+        <Button
+            android:id="@+id/registerButton"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/teal_200"
+            android:text="Register" />
 
-
+    </LinearLayout>
 </LinearLayout>
