--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -7,12 +7,12 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="359dp"
+        android:layout_height="324dp"
         android:layout_gravity="center"
         android:layout_marginTop="60dp"
-        android:text="Fragment"
-        android:textSize="42sp" />
+        android:text="Loading..."
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/btn"
@@ -21,7 +21,7 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:text="send notification" />
+        android:text="Give me another fact" />
 
 </LinearLayout>
 
