--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:text="Hello! :)"
+        android:text="@string/hello"
         android:textSize="42sp" />
 
     <TextView
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:backgroundTint="@color/purple_500"
-            android:text="Login" />
+            android:text="@string/login" />
 
         <TextView
         android:id="@+id/or"
@@ -65,7 +65,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="or"
+        android:text="@string/or"
         android:textSize="22sp" />
 
         <Button
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:backgroundTint="@color/teal_200"
-            android:text="Register" />
+            android:text="@string/register" />
 
     </LinearLayout>
 </LinearLayout>
