--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,24 +4,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <TextView
         android:id="@+id/title"
         android:layout_width="359dp"
-        android:layout_height="324dp"
+        android:layout_height="138dp"
         android:layout_gravity="center"
         android:layout_marginTop="60dp"
         android:text="@string/loading"
         android:textSize="25sp" />
 
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="421dp"
+        android:layout_height="200dp" />
+
     <Button
         android:id="@+id/btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="41dp"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:text="@string/give_me_another_fact" />
 
 </LinearLayout>
-
